# document-extracter

./: .env.example  README.md  docker-compose.ollama.yml  docker-compose.yml  ollama-init.sh  setup-ollama.sh  start.sh  stop.sh
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  constants.py  main.py
backend/app/api/: health.py  resume.py  router.py
backend/app/models/: extraction.py
backend/app/services/: contact_extractor.py  education_extractor.py  experience_extractor.py  extraction_pipeline.py  llm_extractor.py  ner.py  pdf_parser.py  resume_validator.py  skills_extractor.py
backend/app/utils/: exceptions.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: PDFViewer.jsx  ResumeForm.jsx  UploadZone.jsx
frontend/src/services/: api.js
smart-resume-parser/: package-lock.json  package.json
