[project]
name = "resume-parser"
version = "1.0.0"
description = "Smart Resume Form Populator API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "kreuzberg>=0.4.0",
    "tenacity>=8.2.0",
    "ollama>=0.4.5",
]

[project.scripts]
serve = "uvicorn app:app --reload --host 0.0.0.0 --port 8000"
